--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "mongod": "mongod --dbpath ../data/coloquons",
+    "mongod": "mongod --dbpath ./datas",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,19 +26,18 @@
   "homepage": "https://github.com/NiotoMOto/elus-api#readme",
   "dependencies": {
     "adm-zip": "^0.4.7",
-    "bluebird": "^3.3.5",
-    "body-parser": "^1.15.0",
-    "cors": "^2.7.1",
-    "csvtojson": "^0.5.3",
-    "express": "^4.13.4",
-    "lodash": "^4.11.1",
-    "method-override": "^2.3.5",
-    "mongoose": "^4.4.12",
-    "phantom": "^2.0.6",
-    "pretty-error": "^2.0.0",
-    "puid": "^1.0.5",
-    "request-promise": "^3.0.0",
-    "require-dir": "^0.3.0",
-    "restify-mongoose": "^0.2.6"
+    "bluebird": "^3.5.0",
+    "body-parser": "^1.17.2",
+    "cors": "^2.8.3",
+    "csvtojson": "^1.1.6",
+    "express": "^4.15.3",
+    "express-restify-mongoose": "^4.1.3",
+    "lodash": "^4.17.4",
+    "method-override": "^2.3.9",
+    "mongoose": "^4.10.4",
+    "pretty-error": "^2.1.0",
+    "puid": "^1.0.7",
+    "request-promise": "^4.2.1",
+    "require-dir": "^0.3.2"
   }
 }
