--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Api/parser pour stats elus de France",
   "main": "index.js",
   "scripts": {
-    "start": "supervisor index.js",
+    "start": "supervisor -w index.js",
     "mongod": "mongod --dbpath ./datas",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -30,11 +30,13 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.3",
     "csvtojson": "^1.1.6",
+    "errorhandler": "^1.5.0",
     "express": "^4.15.3",
     "express-restify-mongoose": "^4.1.3",
     "lodash": "^4.17.4",
     "method-override": "^2.3.9",
     "mongoose": "^4.10.4",
+    "morgan": "^1.8.2",
     "pretty-error": "^2.1.0",
     "puid": "^1.0.7",
     "request-promise": "^4.2.1",
