--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pretty-error": "^2.1.0",
     "puid": "^1.0.7",
     "request-promise": "^4.2.1",
-    "require-dir": "^0.3.2"
+    "require-dir": "^0.3.2",
+    "supervisor": "^0.12.0"
   }
 }
