--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "method-override": "^2.3.9",
     "mongoose": "^4.10.4",
     "morgan": "^1.8.2",
+    "multer": "^1.3.0",
     "pretty-error": "^2.1.0",
     "puid": "^1.0.7",
     "request-promise": "^4.2.1",
